# hotel_web_scraper

./: .replit  Chattanooga_Lovell_Airport_TN_United_States_05_20_2024_To_05_30_2024.csv  Chattanooga_Lovell_Airport_TN_United_States_05_21_2024_To_05_22_2024.csv  Chattanooga_TN_United_States_05_20_2024_To_05_30_2024.csv  Chattanooga_TN_United_States_05_21_2024_To_05_22_2024.csv  available_total_hotels.py  extract_hotel_data.py  find_free_port.py  get_total_hotels.py  handle_form.py  info.md  input_data.py  load_driver.py  logger.py  main.py  pyproject.toml  save_to_csv.py  scraper.py  setup.py
data/: Auburn_Alabama_United_States_05_25_2024_To_05_26_2024.csv  Auburn_Alabama_United_States_05_26_2024_To_05_27_2024.csv  Baton_Rouge_LA_USA_05_25_2024_To_05_26_2024.csv  Baton_Rouge_LA_USA_05_26_2024_To_05_27_2024.csv  Chattanooga_Lovell_Airport_TN_United_States_05_25_2024_To_05_26_2024.csv  Chattanooga_Lovell_Airport_TN_United_States_05_26_2024_To_05_27_2024.csv  Chattanooga_TN_United_States_05_25_2024_To_05_26_2024.csv  Chattanooga_TN_United_States_05_26_2024_To_05_27_2024.csv  College_Station_TX_United_States_05_25_2024_To_05_26_2024.csv  College_Station_TX_United_States_05_26_2024_To_05_27_2024.csv  Louisville_KY_United_States_05_25_2024_To_05_26_2024.csv  Louisville_KY_United_States_05_26_2024_To_05_27_2024.csv  demo.py  inr_to_usd.py
destinations/: Auburn_Alabama_United_States.py  Baton_Rouge_LA_USA.py  Chattanooga_Lovell_Airport_TN_United_States.py  Chattanooga_TN_United_States.py  College_Station_TX_United_States.py  Louisville_KY_United_States.py  config.ini
(+29 files in other folders)
