[tool.poetry]
name = "repl-nix-hotelwebscraper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_hotelwebscraper"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
